html directory related ansible module spelling mistake in frontend yaml script

--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -10,7 +10,7 @@
     enabled: yes
 
 - name: delete html directory
-  ansible.built.file:
+  ansible.builtin.file:
     path: /usr/share/nginx/html
     state: absent
 
