introducing handlers in frontend yaml

--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -33,6 +33,9 @@
 - name: copy expense config
   ansible.builtin.template:
     src: expense.conf.j2
-    dest: /etc/nginx/default.d/expense.conf
+    dest: /etc/nginx/default.d/expense.conf.j2
   notify:
-  - Restart Nginx
+    - Restart nginx
+
+
+
