--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -56,7 +56,7 @@
     login_host: "{{ MYSQL_HOST }}"
     target: /app/schema/backend.sql
     name: all
-    state: 
+    state: import
 
 - name: daemon reload and restart the service
   ansible.builtin.systemd_service:
