Ansible Roles practice

--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -16,23 +16,32 @@
   ansible.builtin.user:
     name: expense
 
-- name: Create App directory for downloading the backend code
-  ansible.builtin.file:
-    path: /app
-    state: directory
+- name: include from common role
+  # tags:
+  #   - deployment
+  include_role:
+    name: common
+    tasks_from: main
 
-- name: Downloading the backend code
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-    dest: /tmp/backend.zip
+# - name: Create App directory for downloading the backend code
+#   ansible.builtin.file:
+#     path: /app
+#     state: directory
 
-- name: unzip backend code
-  ansible.builtin.unarchive:
-    src: /tmp/backend.zip
-    dest: /app
-    remote_src: yes
+# - name: Downloading the backend code
+#   ansible.builtin.get_url:
+#     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+#     dest: /tmp/backend.zip
+
+# - name: unzip backend code
+#   ansible.builtin.unarchive:
+#     src: /tmp/backend.zip
+#     dest: /app
+#     remote_src: yes
 
 - name: install dependencies
+  tags:
+  - deployment
   community.general.npm:
     path: /app
 
@@ -59,6 +68,8 @@
     state: import
 
 - name: daemon reload and restart the service
+  tags:
+  - deployment
   ansible.builtin.systemd_service:
     name: backend
     state: restarted
