--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -9,26 +9,31 @@
     state: started
     enabled: yes
 
-- name: delete existing default html directory
-  ansible.builtin.file:
-    path: /usr/share/nginx/html
-    state: absent
+- name: include common role
+  include_role:
+    name: common
+    tasks_from: main
+    
+# - name: delete existing default html directory
+#   ansible.builtin.file:
+#     path: /usr/share/nginx/html
+#     state: absent
 
-- name: create new html directory for new backend code integration
-  ansible.builtin.file:
-    path: /usr/share/nginx/html
-    state: directory
+# - name: create new html directory for new backend code integration
+#   ansible.builtin.file:
+#     path: /usr/share/nginx/html
+#     state: directory
 
-- name: Download the front end code
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-    dest: /tmp/frontend.zip
+# - name: Download the front end code
+#   ansible.builtin.get_url:
+#     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+#     dest: /tmp/frontend.zip
 
-- name: unzip front end code
-  ansible.builtin.unarchive:
-    src: /tmp/frontend.zip
-    dest: /usr/share/nginx/html
-    remote_src:  yes
+# - name: unzip front end code
+#   ansible.builtin.unarchive:
+#     src: /tmp/frontend.zip
+#     dest: /usr/share/nginx/html
+#     remote_src:  yes
   
 - name: Copy the expense config file
   ansible.builtin.template:
